--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </header>
-    <div class="sticky">
+    <div class="sticky" style="background-color: chocolate; position: sticky; top: 0;">
         <div class="w3-row w3-hide-medium w3-hide-small">
             <div class="w3-container w3-half w3-bar w3-small" style="width: 40%; margin-left: 50%;">
                 <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>Home</b></a>
@@ -103,7 +103,7 @@
     </div>
     <!-- Main -->
     <main>
-        <div>
+        <div class="w3-display-container">
             <div class="slide-container slides w3-display-container">
                 <img src="images/tyre3.jpeg" alt="rubber_tyres">
                 <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
