--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </header>
-    <div class="sticky" style="background-color: chocolate; position: sticky; top: 0;">
+    <div class="sticky" style="background-color: chocolate;">
         <div class="w3-row w3-hide-medium w3-hide-small">
             <div class="w3-container w3-half w3-bar w3-small" style="width: 40%; margin-left: 50%;">
                 <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>Home</b></a>
@@ -136,6 +136,12 @@
             </script>
             
     </main>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
     <br><br><br><br><br>
     <br><br><br><br><br>
     <br><br><br><br><br>
