--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,9 +18,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Diphylleia&family=Marck+Script&family=Merienda:wght@800&family=Moirai+One&family=PT+Serif&family=Tenor+Sans&family=Yeseva+One&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caprasimo&family=Diphylleia&family=Marck+Script&family=Merienda:wght@800&family=Moirai+One&family=PT+Serif&family=Tenor+Sans&family=Yeseva+One&display=swap"
         rel="stylesheet">
 </head>
+
 <body class="w3-white">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4RKG8817PW"></script>
@@ -46,11 +49,13 @@
     <header class="w3-container" style="background-color: darkslategray;">
         <div class="w3-row-padding w3-text-white">
             <div class="w3-half w3-wide">
-                <h2 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                        <b>RVN</b>
+                <h2
+                    style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    <b>RVN</b>
                 </h2>
             </div>
-            <div class="w3-half w3-bar w3-padding-large w3-right w3-hide-medium w3-hide-small" style="width: fit-content;">
+            <div class="w3-half w3-bar w3-padding-large w3-right w3-hide-medium w3-hide-small"
+                style="width: fit-content;">
                 <a href="#" class="w3-bar-item"><i class="fa-brands fa-facebook"></i></a>
                 <a href="#" class="w3-bar-item"><i class="fa-brands fa-twitter"></i></a>
             </div>
@@ -59,10 +64,14 @@
     <div class="sticky" style="background-color: chocolate;">
         <div class="w3-row w3-hide-medium w3-hide-small">
             <div class="w3-container w3-half w3-bar w3-small" style="width: 40%; margin-left: 50%;">
-                <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>Home</b></a>
-                <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>About</b></a>
-                <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>Catelogue</b></a>
-                <a href="#" class="w3-bar-item w3-btn w3-hover-none" style="width: 25%; color: darkslategray;"><b>Contact</b></a>
+                <a href="#" class="w3-bar-item w3-btn w3-hover-none"
+                    style="width: 25%; color: darkslategray;"><b>Home</b></a>
+                <a href="#" class="w3-bar-item w3-btn w3-hover-none"
+                    style="width: 25%; color: darkslategray;"><b>About</b></a>
+                <a href="#" class="w3-bar-item w3-btn w3-hover-none"
+                    style="width: 25%; color: darkslategray;"><b>Catelogue</b></a>
+                <a href="#" class="w3-bar-item w3-btn w3-hover-none"
+                    style="width: 25%; color: darkslategray;"><b>Contact</b></a>
             </div>
             <div class="w3-half w3-padding w3-right" style="width: 10%;">
                 <i class="fa fa-search" style="color: darkslategray;"></i>
@@ -70,9 +79,8 @@
         </div>
         <div class="w3-container w3-row w3-padding w3-hide-large">
             <div class="w3-half" style="width: fit-content;">
-                <button class="w3-button w3-xlarge w3-hover-none w3-hover-text-teal"
-                    style="color: darkslategray;" onclick="openRightMenu()"><i
-                        class="fa-solid fa-bars"></i></button>
+                <button class="w3-button w3-xlarge w3-hover-none w3-hover-text-teal" style="color: darkslategray;"
+                    onclick="openRightMenu()"><i class="fa-solid fa-bars"></i></button>
             </div>
             <div class="w3-half w3-right" style="width: fit-content;">
                 <i class="fa fa-search w3-margin" style="color: darkslategray;"></i>
@@ -80,12 +88,11 @@
             <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small w3-padding-large"
                 style="display:none; width: 100%; height: fit-content; left: 0;" id="rightMenu">
-                <button onclick="closeRightMenu()"
-                    class="w3-bar-item w3-white w3-xlarge w3-left-align">
-                    <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal" style="color: darkslategray;"></i></button><br><br>
+                <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
+                    <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
+                        style="color: darkslategray;"></i></button><br><br>
                 <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray" href="#home"><b>Home</b></a>
-                <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal"
-                    href="#"><b>About</b></a>
+                <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#"><b>About</b></a>
                 <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#"><b>Catelogue</b></a>
                 <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="blog.html"><b>Contact</b></a>
             </div>
@@ -106,35 +113,42 @@
         <div class="w3-display-container">
             <div class="slide-container slides w3-display-container">
                 <img src="images/tyre3.jpeg" alt="rubber_tyres">
-                <div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
-                French Alps
-              </div>
+                <div
+                    class="w3-display-left display w3-large w3-container w3-padding-16 w3-text-white w3-animate-opacity">
+                    <h2>Lorem ipsum, do<br>lor sit amet consectetur <br> adipisicing elit.</h2>
+                    <button
+                        class="w3-btn w3-padding w3-hover-none w3-white w3-card-4 w3-round-xlarge w3-margin w3-animate-zoom"
+                        style="color: chocolate;"><b>More</b></button>
+                </div>
             </div>
             <div class="slide-container slides w3-display-container">
                 <img src="images/tyre4.jpeg" alt="rubber_tyres">
-                <div class="w3-display-bottomright w3-large w3-container w3-padding-16 w3-black">
-                    French Alps
-              </div>
+                <div
+                    class="w3-display-left display w3-large w3-container w3-padding-16 w3-text-white w3-animate-opacity">
+                    <h2>Lorem ipsum, do<br>lor sit amet consectetur <br> adipisicing elit.</h2>
+                    <button
+                        class="w3-btn w3-padding w3-hover-none w3-white w3-card-4 w3-round-xlarge w3-margin w3-animate-zoom"
+                        style="color: chocolate;"><b>Discover</b></button>
+                </div>
             </div>
-        </div>
-        <!-- Script for Slideshow -->
-        <script>
-            var myIndex = 0;
-            carousel();
-            
-            function carousel() {
-                var i;
-                var x = document.getElementsByClassName("slides");
-                for (i = 0; i < x.length; i++) {
-                   x[i].style.display = "none";  
+            <!-- Script for Slideshow -->
+            <script>
+                var myIndex = 0;
+                carousel();
+
+                function carousel() {
+                    var i;
+                    var x = document.getElementsByClassName("slides");
+                    for (i = 0; i < x.length; i++) {
+                        x[i].style.display = "none";
+                    }
+                    myIndex++;
+                    if (myIndex > x.length) { myIndex = 1 }
+                    x[myIndex - 1].style.display = "block";
+                    setTimeout(carousel, 5000); // Change image every 5 seconds
                 }
-                myIndex++;
-                if (myIndex > x.length) {myIndex = 1}    
-                x[myIndex-1].style.display = "block";  
-                setTimeout(carousel, 5000); // Change image every 5 seconds
-            }
             </script>
-            
+
     </main>
     <br><br><br><br><br>
     <br><br><br><br><br>
@@ -149,4 +163,5 @@
     <br><br><br><br><br>
     <br><br><br><br><br>
 </body>
+
 </html>
