--- a/index.html
+++ b/index.html
@@ -148,20 +148,34 @@
                     setTimeout(carousel, 5000); // Change image every 5 seconds
                 }
             </script>
-
+            <!-- About -->
+            <div id="about" class="w3-container">
+                <div class="about w3-section">
+                    <div class="header w3-container w3-round-xlarge">
+                        <h3 class="w3-wide w3-right">Who Are We?</h3>
+                    </div>
+                    <div class="w3-row w3-mobile">
+                        <div class="w3-half tab_half smartphone_half  w3-padding w3-mobile">
+                            <img src="images/reclycle-removebg-preview.png" alt="">
+                        </div>
+                        <div class="w3-half tab_half smartphone_half w3-mobile">
+                            <h4 class="w3-wide">ABOUT US</h4>
+                            <p class="w3-text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+                                iusto recusandae dolor,
+                                ipsa libero, veniam quia blanditiis architecto, commodi aliquam aperiam nemo. <br><br>
+                                Dicta odit nulla labore maxime dolor dignissimos earum, nisi totam, error eum
+                                voluptatibus
+                                commodi. Modi facilis esse quasi quae quo. Odit voluptatem, ratione quae recusandae
+                                molestiae
+                                repellat quasi.</p>
+                            <button class="w3-btn w3-padding w3-hover-none w3-card-4 w3-round-large w3-animate-zoom"
+                                style="color: darkslategray;"><b>Read More</b></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
+
 </body>
 
 </html>
