--- a/index.html
+++ b/index.html
@@ -174,6 +174,56 @@
                     </div>
                 </div>
             </div>
+            <!-- About -->
+            <div id="services">
+                <div class="services w3-section">
+                    <div class="w3-container" style="background-color: darkslategray;">
+                        <h1 class="w3-center w3-wide w3-text-white"><b>RVN.</b> <span
+                                style="font-family: 'Courier New', Courier, monospace;">RUBBER RECLCYCLING
+                                SERVICES</span></h1>
+                        <p class="w3-text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, dolorem.
+                        </p>
+                    </div>
+                    <div class="w3-row w3-padding-large w3-mobile">
+                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                            <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
+                                class="w3-round-xxlarge">
+                            <div class="w3-container">
+                                <h5>LOREM IPSUM DOLOR SIT AMET</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
+                                    distinctio, illum doloribus?</p>
+                            </div>
+                        </div>
+                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                            <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
+                                class="w3-round-xxlarge">
+                            <div class="w3-container">
+                                <h5>LOREM IPSUM DOLOR SIT AMET</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
+                                    distinctio, illum doloribus?</p>
+                            </div>
+                        </div>
+                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                            <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
+                                class="w3-round-xxlarge">
+                            <div class="w3-container">
+                                <h5>LOREM IPSUM DOLOR SIT AMET</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
+                                    distinctio, illum doloribus?</p>
+                            </div>
+                        </div>
+                        <div class="w3-quarter custom_tab smartphone_half w3-padding w3-mobile">
+                            <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
+                                class="w3-round-xxlarge">
+                            <div class="w3-container">
+                                <h5>LOREM IPSUM DOLOR SIT AMET</h5>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
+                                    distinctio, illum doloribus?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
 
 </body>
