--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                         <p class="w3-text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, dolorem.
                         </p>
                     </div>
-                    <div class="w3-row w3-padding-large w3-mobile">
-                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                    <div class="w3-row-padding w3-padding-large w3-mobile">
+                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
                                 class="w3-round-xxlarge">
                             <div class="w3-container">
@@ -194,7 +194,7 @@
                                     distinctio, illum doloribus?</p>
                             </div>
                         </div>
-                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
                                 class="w3-round-xxlarge">
                             <div class="w3-container">
@@ -203,7 +203,7 @@
                                     distinctio, illum doloribus?</p>
                             </div>
                         </div>
-                        <div class="w3-quarter custom_tab smartphone_half desktop_width w3-padding w3-mobile">
+                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
                                 class="w3-round-xxlarge">
                             <div class="w3-container">
@@ -212,7 +212,7 @@
                                     distinctio, illum doloribus?</p>
                             </div>
                         </div>
-                        <div class="w3-quarter custom_tab smartphone_half w3-padding w3-mobile">
+                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
                                 class="w3-round-xxlarge">
                             <div class="w3-container">
