--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Rubber Reclycling | Agency</title>
     <link rel="stylesheet" href="css/4/w3.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/w3.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -184,41 +185,81 @@
                         <p class="w3-text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, dolorem.
                         </p>
                     </div>
-                    <div class="w3-row-padding w3-padding-large w3-mobile">
-                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
+                    <div class="w3-row w3-mobile" style="padding: 5%;">
+                        <div
+                            class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
-                                class="w3-round-xxlarge">
+                                class="w3-round-xxlarge  w3-card-4">
                             <div class="w3-container">
                                 <h5>LOREM IPSUM DOLOR SIT AMET</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
-                                    distinctio, illum doloribus?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
+                        <div
+                            class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
-                                class="w3-round-xxlarge">
+                                class="w3-round-xxlarge w3-card-4">
                             <div class="w3-container">
                                 <h5>LOREM IPSUM DOLOR SIT AMET</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
-                                    distinctio, illum doloribus?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
+                        <div
+                            class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
-                                class="w3-round-xxlarge">
+                                class="w3-round-xxlarge w3-card-4">
                             <div class="w3-container">
                                 <h5>LOREM IPSUM DOLOR SIT AMET</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
-                                    distinctio, illum doloribus?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
-                        <div class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-card w3-white">
+                        <div
+                            class="w3-quarter tab custom_tab smartphone_half desktop_width w3-padding w3-mobile w3-round-xlarge w3-white">
                             <img src="images/reclycle2-removebg-preview.png" alt="rubber_tyres"
-                                class="w3-round-xxlarge">
+                                class="w3-round-xxlarge w3-card-4">
                             <div class="w3-container">
                                 <h5>LOREM IPSUM DOLOR SIT AMET</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut commodi itaque dolorem
-                                    distinctio, illum doloribus?</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Who We Are -->
+            <div class="w3-container" style="padding: 2%; width: 90%; margin: auto;">
+                <h2><b>WHY US</b></h2>
+                <div class="w3-row" style="padding: 2%;">
+                    <div class="w3-half w3-mobile">
+                        <div style="display: flex;">
+                            <div class="w3-round-xlarge w3-center w3-text-white"
+                                style="background-color: darkslategrey; width: 20%; padding: 8%;">
+                                <!-- Why Us Icon-->
+                                <b>I<br>C<br>O<br>N</b>
+                            </div>
+                            <div style="width: 80%; padding: 9%;">
+                                <!-- Why Us Content -->
+                                <div class="w3-bottombar w3-rightbar w3-border-dark-grey w3-round-xlarge">
+                                    <h6>Lorem ipsum dolor sit amet.</h6>
+                                    <p style="color: chocolate">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w3-half w3-mobile">
+                        <div style="display: flex;">
+                            <div class="w3-round-xlarge w3-center w3-text-white"
+                                style="background-color: darkslategrey; width: 20%; padding: 8%;">
+                                <!-- Why Us Icon-->
+                                <b>I<br>C<br>O<br>N</b>
+                            </div>
+                            <div style="width: 80%; padding: 9%;">
+                                <!-- Why Us Content -->
+                                <div class="w3-bottombar w3-rightbar w3-border-dark-grey w3-round-xlarge">
+                                    <h6>Lorem ipsum dolor sit amet.</h6>
+                                    <p style="color: chocolate">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
