--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div id="about" class="w3-container">
                 <div class="about w3-section">
                     <div class="header w3-container w3-round-xlarge">
-                        <h3 class="w3-wide w3-right">Who Are We?</h3>
+                        <h3 class="w3-wide w3-right">Who We Are</h3>
                     </div>
                     <div class="w3-row w3-mobile">
                         <div class="w3-half tab_half smartphone_half  w3-padding w3-mobile">
