--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small w3-padding-large"
-                style="display:none; width: 100%; height: fit-content; left: 0; top: 65px;" id="rightMenu">
+                style="display:none; width: 100%; height: 100vh; left: 0; top: 65px;" id="rightMenu">
                 <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
                     <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
                         style="color: darkslategray;"></i></button><br><br>
