--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="w3-col l2 m1 s2 w3-round-xlarge w3-center w3-text-white w3-padding-32"
                             style="background-color: darkslategrey;">
                             <!-- Why Us Icon-->
-                            <b>I<br>C<br>O<br>N</b>
+                            <i class="fa-solid fa-circle-check w3-xxlarge"></i>
                         </div>
                         <div class="w3-col l10 m11 s10 w3-padding">
                             <!-- Why Us Content -->
@@ -234,7 +234,7 @@
                         <div class="w3-col l2 m1 s2 w3-round-xlarge w3-center w3-text-white w3-padding-32"
                             style="background-color: darkslategrey;">
                             <!-- Why Us Icon-->
-                            <b>I<br>C<br>O<br>N</b>
+                            <i class="fa-solid fa-circle-check w3-xxlarge"></i>
                         </div>
                         <div class="w3-col l10 m11 s10 w3-padding">
                             <!-- Why Us Content -->
