--- a/index.html
+++ b/index.html
@@ -248,26 +248,32 @@
                 </div>
             </div>
         </div>
-        <section class="w3-center w3-text-white w3-padding-64" style="background-color: chocolate; font-family: poppins;">
-            <h1>START MANUFACTURING NOW</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus enim odio dolore? Inventore,
-                corporis fuga.</p>
-                <i class="fa-solid fa-arrow-down-long"></i> <br>
-            <button style="background-color: darkslategray;"
-                class="w3-btn w3-hover-none w3-round-xxlarge w3-padding-large w3-large w3-margin w3-card-4">CONTACT
-                US NOW</button>
+        <section class="w3-row w3-center w3-text-white" style="background-color: chocolate; font-family: poppins;">
+            <div class="w3-col l7 m12 s12 w3-padding-64 w3-border">
+                <div class="w3-padding-64 w3-border">
+                    <div class="w3-padding-64 w3-border">
+                        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">START MANUFACTURING NOW</h1>
+                        <h2 style="font-family: poppins;"><span style="font-family: poppins; color: #2f4f4f; font-weight: bolder;">Need help<i class="fa-solid fa-question"></i></span> Contact our award winning support team <span style="color: #2f4f4f; font-weight: bold;">24/7</span></h2>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-col l5 m12 s12">
+                <img src="images/web-design-square.png" class="w3-image" alt="">
+            </div>
         </section>
-        <footer class="w3-text-white" style="background-color: darkslategray;">
-                <div class="w3-row w3-padding-32">
-                    <div class="w3-col l4 m6 s12 w3-small w3-mobile w3-padding-large">
+        <footer class="w3-text-white" style="background-color: #2f4f4f;">
+                <div class="w3-row w3-padding-64 w3-padding-large">
+                    <div class="w3-col l4 m12 s12 w3-small w3-mobile w3-padding-large">
                         <h2 class="w3-wide"
                             style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                             <b>RVN</b>
                         </h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, corporis. 
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, corporis.</p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, corporis.
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, corporis. 
+                        </p>
                     </div>
-                    <div class="w3-col l2 m6 s12 w3-mobile w3-padding-large">
+                    <div class="w3-col l2 m12 s12 w3-mobile w3-padding-large">
                         <h4><b>QUICK LINKS</b></h4>
                         <div class="w3-bar-block">
                             <a class="w3-bar-item w3-btn w3-hover-none" href="Home"><i class="fa fa-home"></i> Home</a>
@@ -279,7 +285,7 @@
                                 Contact</a>
                         </div>
                     </div>
-                    <div class="w3-col l2 m6 s12 w3-mobile w3-padding-large">
+                    <div class="w3-col l2 m12 s12 w3-mobile w3-padding-large">
                         <h4><b>TAGS</b></h4>
                         <div class="w3-bar w3-small" style="font-weight: 900;">
                             <a class="w3-bar-item w3-btn w3-card-4" href="Home">Manufacturing</a>
