--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
         </div>
         <section id="contact" class="w3-row w3-center w3-padding-64 w3-padding-large w3-text-white" style="font-family: poppins;">
             <div class="w3-col l7 m12 s12 contact-box-small">
-                <div class="w3-padding-64 contact-box-left" style="background-color: #d2691e;">
-                    <div class="contact-box-small-2">
+                <div class="w3-padding-64 contact-box-left w3-border w3-border-green" style="background-color: #d2691e;">
+                    <div class="contact-box-small-2 w3-border">
                         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">START MANUFACTURING NOW</h1>
                         <h3 style="font-family: poppins;"><span style="font-family: poppins; color: #2f4f4f; font-weight: bolder;">Need help<i class="fa-solid fa-question"></i></span> Contact our award winning support team <span style="color: #2f4f4f; font-weight: bold;">24/7</span></h3>
                     </div>
